Uppdaterat openapi och lagt till getRoleAction
